# qtws23-script-automation

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  historymodel.cpp  historymodel.h  logger.cpp  logger.h  logger_utility.h  main.cpp  scriptrunner.cpp  scriptrunner.h  textdocument.cpp  textdocument.h  widget.cpp  widget.h  widget.ui
